// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab border props 1`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="">内容 2</div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab click to switch tab 1`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="">内容 2</div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab click to switch tab 2`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="display: none;">内容 2</div>
    <div class="o-tab__pane" style="">内容 3</div>
  </div>
</div>
`;

exports[`Tab name prop 1`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab o-tab--disabled"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="">内容 1</div>
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab render nav-left & nav-right slot 1`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">Nav Left<div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>Nav Right
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="">内容 2</div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 1`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab o-tab--disabled"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0);"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="">内容 1</div>
    <div class="o-tab__pane" style="display: none;"></div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 2`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab o-tab--disabled"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;">内容 1</div>
    <div class="o-tab__pane" style="">内容 2</div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`Tab swipe to switch tab 3`] = `
<div class="o-tabs o-tabs--line o-tabs--normal">
  <div class="o-tabs__wrap o-tabs o-hairline--top-bottom">
    <div class="o-tabs__nav o-tabs__nav--line">
      <div class="o-tab"><span class="o-ellipsis">标签 1</span></div>
      <div class="o-tab o-tab--active"><span class="o-ellipsis">标签 2</span></div>
      <div class="o-tab o-tab--disabled"><span class="o-ellipsis">标签 3</span></div>
      <div class="o-tabs__line" style="width: 4px; transform: translate3D(-2px, 0, 0); transition-duration: 0.3s;"></div>
    </div>
  </div>
  <div class="o-tabs__content">
    <div class="o-tab__pane" style="display: none;">内容 1</div>
    <div class="o-tab__pane" style="">内容 2</div>
    <div class="o-tab__pane" style="display: none;"></div>
  </div>
</div>
`;
